# future-local-storage

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: async_tracer.rs
examples/context/: mod.rs
src/: future.rs  imp.rs  lazy_lock.rs  lib.rs  old.rs  once_lock.rs
