[package]
name = "future-local-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["unstable"]
unstable = []

[dependencies]
pin-project = "1.1.3"
state = { version = "0.6.0", features = ["tls"] }

[dev-dependencies]
futures-util = { version = "0.3" }
pretty_assertions = "1.4.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
missing_panics_doc = "allow"
