[package]
name = "future-local-storage"
description = "An init-once-per-future cell for thread-local values."
version = "0.1.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/alekseysidorov/future-local-storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
pin-project = "1.1.3"
state = { version = "0.6.0", features = ["tls"] }

[dev-dependencies]
futures-util = { version = "0.3" }
pretty_assertions = "1.4.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
missing_panics_doc = "warn"
