[package]
name = "future-local-storage"
version = "0.1.3"
rust-version = "1.78"
edition = "2021"

description = "An init-once-per-future cell for thread-local values."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/future-local-storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
include-utils = "0.2"
pin-project = "1.1"
state = { version = "0.6", features = ["tls"] }

[dev-dependencies]
futures-util = { version = "0.3" }
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"
